--- a/QRCodeTeamsBot/QRCodeTeamsBot.csproj
+++ b/QRCodeTeamsBot/QRCodeTeamsBot.csproj
@@ -8,7 +8,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.15.2" />
+    <PackageReference Include="QRCodeDecoderLibrary" Version="2.0.1" />
     <PackageReference Include="RestSharp" Version="107.3.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
     <ItemGroup>
