--- a/QRCodeTeamsBot/QRCodeTeamsBot.csproj
+++ b/QRCodeTeamsBot/QRCodeTeamsBot.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="QRCodeDecoderLibrary" Version="2.0.1" />
     <PackageReference Include="RestSharp" Version="107.3.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="ZXing.Net" Version="0.16.8" />
   </ItemGroup>
 
     <ItemGroup>
